--- a/Airflow/.gitignore
+++ b/Airflow/.gitignore
@@ -10,8 +10,8 @@
 # Crash log files
 crash.log
 
-# Exclude all .tfvars files, which are likely to contain sentitive data, such as
-# password, private keys, and other secrets. These should not be part of version
+# Exclude all .tfvars files, which are likely to contain sensitive data, such as
+# passwords, private keys, and other secrets. These should not be part of version
 # control as they are data points which are potentially sensitive and subject
 # to change depending on the environment.
 #
@@ -39,3 +39,6 @@ terraform.rc
 
 #kubeconfigfile
 kubeconfig*
+
+# python virtual environment
+.venv/
