--- a/.github/workflows/sync_dataproc_bucket.yml
+++ b/.github/workflows/sync_dataproc_bucket.yml
@@ -22,4 +22,9 @@ jobs:
     steps:
       - name: Google Cloud Storage Bucket Sync (GCP,GCS)
         uses: patrickwyler/gcs-bucket-sync-action@1.3
+        with:
+          secrets: ${{ secrets.google_service_account_credentials }}
+          bucket: 'wizeline-deb-movie-analytics-fpa'
+          sync_dir: 'Dataproc'
+          exclude: '.*\.md$|\.gitignore$|\.git/.*$|\.github/.*$'
 
