--- a/.github/workflows/sync_dataproc_bucket.yml
+++ b/.github/workflows/sync_dataproc_bucket.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Google Cloud Storage Bucket Sync (GCP,GCS)
         uses: patrickwyler/gcs-bucket-sync-action@1.3
         with:
-          secrets: ${{ google_service_account_credentials.google_service_account_credentials }}
+          secrets: ${{ secrets.google_service_account_credentials }}
           bucket: 'wizeline-deb-movie-analytics-fpa'
           sync_dir: 'Dataproc'
           exclude: '.*\.md$|\.gitignore$|\.git/.*$|\.github/.*$'
