--- a/.github/workflows/sync_dataproc_bucket.yml
+++ b/.github/workflows/sync_dataproc_bucket.yml
@@ -22,11 +22,19 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       
-      - name: Google Cloud Storage Bucket Sync (GCP,GCS)
-        uses: patrickwyler/gcs-bucket-sync-action@1.3
+      - name: sync dataproc template scripts
+        uses: ../actions/sync_git_gcs.yml
         with:
           secrets: ${{ secrets.GOOGLE_SERVICE_ACCOUNT_CREDENTIALS }}
           bucket: 'wizeline-deb-movie-analytics-fpa'
-          sync_dir: 'Dataproc'
+          sync_git_dir: 'Dataproc'
+          sync_gcs_dir: 'Dataproc'
           exclude: '.*\.md$|\.gitignore$|\.git/.*$|\.github/.*$'
+        env:
+          INPUT_SECRETS: ${{ secrets.GOOGLE_SERVICE_ACCOUNT_CREDENTIALS }}
+          INPUT_BUCKET: 'wizeline-deb-movie-analytics-fpa'
+          INPUT_SYNC_GIT_DIR: 'Dataproc'
+          INPUT_SYNC_GCS_DIR: 'Dataproc'
+          INPUT_EXCLUDE: '.*\.md$|\.gitignore$|\.git/.*$|\.github/.*$'
+
 
