--- a/.github/workflows/sync_dataproc_bucket.yml
+++ b/.github/workflows/sync_dataproc_bucket.yml
@@ -23,7 +23,7 @@ jobs:
       - uses: actions/checkout@master
       
       - name: sync dataproc template scripts
-        uses: ./.github/actions/sync_git_gcs.yml
+        uses: ./.github/actions/action.yml
         with:
           secrets: ${{ secrets.GOOGLE_SERVICE_ACCOUNT_CREDENTIALS }}
           bucket: 'wizeline-deb-movie-analytics-fpa'
